fix(form): prevent helper text from creating large gaps between fields

--- a/src/components/helper-line/helper-line.scss
+++ b/src/components/helper-line/helper-line.scss
@@ -9,6 +9,7 @@
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     font-size: 0.6875rem;
+    line-height: normal;
 
     color: rgb(var(--contrast-1200));
 }
